crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__payment_methods_query.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 286
expression: query_response
---
{
  "data": {
    "tenant": {
      "billing": {
        "paymentMethods": [
          {
            "billingDetails": {
              "name": "Alice"
            },
            "card": {
              "brand": "visa",
              "expMonth": 0,
              "expYear": 0,
              "last4": "4242"
            },
            "id": "pm_1",
            "type": "card",
            "usBankAccount": null
          },
          {
            "billingDetails": {
              "name": "Alice"
            },
            "card": null,
            "id": "pm_2",
            "type": "us_bank_account",
            "usBankAccount": {
              "accountHolderType": null,
              "bankName": "STRIPE TEST BANK",
              "last4": "6789"
            }
          }
        ],
        "primaryPaymentMethod": {
          "id": "pm_1"
        }
      }
    }
  }
}
