crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__query_billing_contact.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
expression: query_response
---
{
  "data": {
    "tenant": {
      "billing": {
        "contact": {
          "address": {
            "city": "Springfield",
            "country": "US",
            "line1": "123 Main St",
            "line2": null,
            "postalCode": "62704",
            "state": "IL"
          },
          "email": "billing@example.com",
          "name": "Acme Corp"
        }
      }
    }
  }
}
