crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__set_payment_method.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 303
expression: mutation_response
---
{
  "data": {
    "setBillingPaymentMethod": {
      "paymentMethods": [
        {
          "id": "pm_1"
        },
        {
          "id": "pm_2"
        }
      ],
      "primaryPaymentMethod": {
        "id": "pm_2"
      }
    }
  }
}
