crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__mutations__tests__victim_tenant_query.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/mutations.rs
assertion_line: 356
expression: victim_query_response
---
{
  "data": {
    "tenant": {
      "billing": {
        "paymentMethods": [
          {
            "id": "pm_v"
          }
        ],
        "primaryPaymentMethod": {
          "id": "pm_v"
        }
      }
    }
  }
}
